--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "iniparser": "~1.0.5",
     "mkdirp": "~0.5.0",
-    "ncp": "~0.6.0"
+    "ncp": "~0.6.0",
+    "my-github-username": "~0.1.1"
   }
 }
