Tidied up app entry point

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
+    "docopt": "^0.4.0",
+    "git-clone": "0.0.4",
     "iniparser": "~1.0.5",
     "mkdirp": "~0.5.0",
-    "ncp": "~0.6.0",
     "my-github-username": "~0.1.1",
-    "git-clone": "0.0.4",
-    "tmp": "0.0.24",
-    "rimraf": "~2.2.8"
+    "ncp": "~0.6.0",
+    "rimraf": "~2.2.8",
+    "tmp": "0.0.24"
   },
   "devDependencies": {
     "pegjs": "~0.8.0"
