--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "my-github-username": "~0.1.1",
     "ncp": "~0.6.0",
     "rimraf": "~2.2.8",
+    "tape": "^3.0.0",
     "tmp": "0.0.24"
   },
   "devDependencies": {
