--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
   "bugs": {
     "url": "https://github.com/jaz303/template-anything/issues"
   },
-  "homepage": "https://github.com/jaz303/template-anything",
+  "homepage": "https://github.com/jaz303/template-anything"
 }
