--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "my-github-username": "~0.1.1",
     "ncp": "~0.6.0",
     "rimraf": "~2.2.8",
+    "shell-escape": "^0.1.0",
     "tape": "^3.0.0",
     "tmp": "0.0.24"
   },
