--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "template-anything",
   "version": "1.2.3",
   "description": "Turn any git repository into a project template!",
-  "keywords": ["template", "scaffold", "generator", "scripting", "project"],
+  "keywords": [
+    "template",
+    "scaffold",
+    "generator",
+    "scripting",
+    "project"
+  ],
   "scripts": {
     "test": "set -e; for t in test/*; do node $t; done"
   },
@@ -16,6 +22,7 @@
     "mkdirp": "~0.5.0",
     "my-github-username": "~0.1.1",
     "ncp": "~0.6.0",
+    "osenv": "^0.1.0",
     "rimraf": "~2.2.8",
     "shell-escape": "^0.1.0",
     "tmp": "0.0.24"
