--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "tmp": "0.0.24"
   },
   "devDependencies": {
+    "marked": "^0.3.3",
     "pegjs": "~0.8.0",
+    "pygmentize-bundled": "^2.3.0",
     "tape": "^3.0.0"
   },
   "repository": {
