--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "osenv": "^0.1.0",
     "rimraf": "~2.2.8",
     "shell-escape": "^0.1.0",
+    "shell-quote": "^1.4.3",
     "tmp": "0.0.24"
   },
   "devDependencies": {
