--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "ta": "./bin/ta"
   },
   "dependencies": {
+    "cpr": "^1.0.0",
     "docopt": "^0.4.0",
     "git-clone": "^0.1.0",
     "iniparser": "~1.0.5",
     "mkdirp": "~0.5.0",
     "my-github-username": "~0.1.1",
-    "ncp": "~0.6.0",
     "osenv": "^0.1.0",
     "rimraf": "~2.2.8",
     "shell-escape": "^0.1.0",
